Add Sort task functionality

--- a/src/components/TaskList.css
+++ b/src/components/TaskList.css
@@ -29,3 +29,17 @@
   color: #ffffff7c;
   text-decoration: line-through;
 }
+
+.task-actions{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.task-actions > button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border: none;
+}
