--- a/src/components/AddTask.css
+++ b/src/components/AddTask.css
@@ -14,7 +14,7 @@
   padding: 1rem;
   position: absolute;
   transform: translateY(100%);
-  transition: transform 1s ease;
+  transition: transform .7s ease;
   border: 1px solid;
 }
 
