--- a/src/components/AddTask.css
+++ b/src/components/AddTask.css
@@ -7,7 +7,13 @@
 .add-task-inner{
   height: 144px;
   position: relative;
+  height: 2rem;
+  transition: height 1s ease;
   overflow: hidden;
+}
+
+.add-task-inner.toggle{
+  height: 144px;
 }
 
 .add-task-modal{
@@ -16,6 +22,7 @@
   transform: translateY(100%);
   transition: transform .7s ease;
   border: 1px solid;
+  background-color: #242424;
 }
 
 .add-task-modal.open{
@@ -28,6 +35,9 @@
   position: absolute;
   left: 0;
   bottom: 0;
+  display: flex;
+  justify-content: center;
+  place-items: center;
 }
 
 .add-input{
