--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  /* padding: 2rem; */
+  /* max-width: 1280px; */
+  margin: 0;
   text-align: center;
   /* border: 1px solid; */
+  display: flex;
+  
+  width: 100vw;
+  height: 100vh;
+}
+
+.app{
+  color: var(--text-primary);
+  background-color: var(--background);
+  height: 100%;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: start;
 }
