--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,13 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --background: white;
+  --secondary-background: #6C63FF;
+  --text-primary: #242424;
+  --text-secondary: #6C63FF;
+  --purple: #6C63FF;
+  --primary-border: #6C63FF;
+  --secondary-border: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,12 +18,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+[data-theme='dark']{
+  --background: #242424;
+  --text-primary: rgba(255, 255, 255, 0.87);
+  --button-color: #6b6b6b;
+
+}
+
 body {
-  margin: 0;
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
   position: relative;
+  background-color: var(--background);
+  min-height: 100vh;
 }
 
 *{
