--- a/src/components/AddTask.css
+++ b/src/components/AddTask.css
@@ -22,7 +22,7 @@
   transform: translateY(100%);
   transition: transform .7s ease;
   border: 1px solid;
-  background-color: #242424;
+  background-color: var(--background);
 }
 
 .add-task-modal.open{
@@ -38,6 +38,9 @@
   display: flex;
   justify-content: center;
   place-items: center;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--secondary-background);
 }
 
 .add-input{
@@ -45,9 +48,19 @@
   margin-bottom: 1rem;
   height: 2rem;
   padding: 10px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 2px solid var(--primary-border);
+  background-color: transparent;
+  color: var(--text-secondary);
+  outline: none;
 }
 
 .add-btn{
+  background-color: transparent;
+  color: var(--text-secondary);
+  border: 1px solid var(--secondary-border);
+  font-weight: 600;
   width: 100px;
   height: 2rem;
 }
