--- a/src/components/TodoHeader.css
+++ b/src/components/TodoHeader.css
@@ -21,7 +21,7 @@
   justify-content: center;
   gap: 5px;
   border-radius: 5px;
-  background-color: var(--purple);
+  background-color: var(--secondary-background);
   padding: .5rem;
   position: relative;
   cursor: pointer;
