--- a/src/components/modals/Modal.css
+++ b/src/components/modals/Modal.css
@@ -5,8 +5,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 100;
 }
 
 .modal-container{
   border: 1px solid;
+  background-color: var(--background);
+  width: 400px;
+  padding: 1rem 2rem;
+}
+
+.modal-input{
+  width: 100%;
+  height: 2rem;
+  margin: 1rem 0 5rem;
+}
+
+.modal-btn-container{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-btn{
+  padding: .5rem 1.5rem;
+  font-size: 1rem;
 }
